Closed Bug 124463 Opened 24 years ago Closed 24 years ago

CDATA section not supported for RDF

Categories

(Core :: XML, defect, P2)

x86
Windows 2000
defect

Tracking

()

RESOLVED FIXED
mozilla0.9.9

People

(Reporter: harishd, Assigned: harishd)

Details

(Keywords: regression)

Attachments

(1 file)

Missed CDATA section implementation, for RDF, when I landed XML parsing optimization.
Status: NEW → ASSIGNED
Keywords: regression
Priority: -- → P2
Target Milestone: --- → mozilla0.9.9
Attached patch patch v1.0Splinter Review
Comment on attachment 68602 [details] [diff] [review] patch v1.0 r=heikki Let's file new bugs for RDF content sink not creating CDATA nodes, and another one for XUL content sink not creating CDATA nodes.
Attachment #68602 - Flags: review+
patch works fine for me. This fixes the regression. style nit: > + return aData? AddText(aData, aLength) : NS_OK; should be: return aData ? AddText(aData, aLength) : NS_OK; Same for the other one . . . (From update of attachment 68602 [details] [diff] [review]) r=pete If r= is needed. --pete
Comment on attachment 68602 [details] [diff] [review] patch v1.0 sr=jst
Attachment #68602 - Flags: superreview+
fix is in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
QA Contact: petersen → rakeshmishra
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: