Regression - Add CDATA section support for RDF. b=124463, r=heikki, sr=jst